# joker-guide

./: .gitignore  .prototools  CLAUDE.md  INSTALL.md  README.md  README.zh-TW.md  notes.md  task_plan.md  train.sh
.claude/: settings.json
.claude/tasks/09388fe5-165c-462a-8dc5-d7f3720bfea6/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  (+61 more)
036daebe-5c98-494f-85a0-fd93681f6aa8/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  8.json  9.json
data/: blinds.json  booster-packs.json  card-modifiers.json  challenges.json  data-schema.json  decks.json  joker-ids.json  jokers-meta.json  planet-cards.json  poker-hands.json  spectral-cards.json  stakes.json  tags.json  tarot-cards.json  vouchers.json
proto/: joker_guide.proto
python-env/: pyproject.toml
python-env/src/joker_env/: __init__.py  batch_vec_env.py  callbacks.py  client.py  env.py  reward.py  train.py  train_sb3.py
python-env/src/joker_env/proto/: __init__.py  joker_guide_pb2.py  joker_guide_pb2_grpc.py
python-env/tests/: test_reward.py
rust-engine/: Cargo.toml  build.rs
rust-engine/plans/: elegant-wandering-barto.md
rust-engine/src/: lib.rs  main.rs
rust-engine/src/game/: blinds.rs  cards.rs  constants.rs  consumables.rs  decks.rs  hand_types.rs  joker.rs  joker_def.rs  mod.rs  packs.rs  reward.rs  scoring.rs  shop.rs  stakes.rs  tags.rs  vouchers.rs
rust-engine/src/service/: action_mask.rs  integration_tests.rs  mod.rs  observation.rs  scoring.rs  state.rs
rust-trainer/: README.md
scripts/: checkpoint_report.py  gen_proto.sh  setup.sh
