[package]
name = "joker_env"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"
prost = "0.12"
rand = "0.8"
serde_json = "1.0"
dashmap = "5"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
proptest = "1.0"
